--- a/assets/animations.css
+++ b/assets/animations.css
@@ -121,15 +121,15 @@
     transition-delay: 0.4s !important; 
 }
 
-.stat.animate-hero-right:nth-child(1) { 
+.hero-stats .stat.animate-hero-left:nth-child(1) { 
     transition-delay: 0.5s !important; 
 }
 
-.stat.animate-hero-right:nth-child(2) { 
+.hero-stats .stat.animate-hero-left:nth-child(2) { 
     transition-delay: 0.6s !important; 
 }
 
-.stat.animate-hero-right:nth-child(3) { 
+.hero-stats .stat.animate-hero-left:nth-child(3) { 
     transition-delay: 0.7s !important; 
 }
 
